# pynxxas

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
conversion_examples/: README
conversion_examples/BlissMultiModal/: make_xas.py
conversion_examples/Fe_XDIFiles/: fe2o3_rt_new.xdi  fe_metal_rt_new.xdi  fe_xas_nexus.h5  feo_rt1_new.xdi  make_fe_xas.py  make_xas.py
conversion_examples/KEK_PFdata/: Fe_XAS_PF9A_nexus.h5  make_xas.py
conversion_examples/MultiElementFluor/: V_XANES_ap1.001  V_XANES_ap10.001  V_XANES_ap10_new.001  V_XANES_ap11.001  V_XANES_ap11_new.001  V_XANES_ap12.001  V_XANES_ap12_new.001  V_XANES_ap1_new.001  V_XANES_ap2.001  V_XANES_ap2_new.001  V_XANES_ap3.001  V_XANES_ap3_new.001  V_XANES_ap4.001  V_XANES_ap4_new.001  V_XANES_ap5.001  V_XANES_ap5_new.001  V_XANES_ap6.001  V_XANES_ap6_new.001  V_XANES_ap7.001  V_XANES_ap7_new.001  V_XANES_ap8.001  V_XANES_ap8_new.001  V_XANES_ap9.001  V_XANES_ap9_new.001  make_xas.py
doc/: api.rst  conf.py  howtoguides.rst  index.rst  tutorials.rst
doc/_ext/: myhdf5_inline_role.py
doc/howtoguides/: convert_files.rst  install.rst  nxdl_validate.rst
doc/tutorials/: models.rst
nxxas_examples/: BlissMultiModal.h5  Fe_XDIFiles.h5  KEK_PFdata.h5  MultiElementFluor.h5  generate.sh  generic.h5
src/pynxxas/apps/: __init__.py  nx_validate.py  nxdl_validate.py  nxxas_convert.py
src/pynxxas/io/: __init__.py  columnfile.py  convert.py  hdf5_utils.py  nexus.py  url_utils.py  utils.py  xas_beamlines.py  xdi.py
src/pynxxas/models/: __init__.py  nexus.py  units.py  xdi.py
src/pynxxas/models/convert/: __init__.py  nexus.py  xdi.py
src/pynxxas/nexus/: __init__.py  models.py
src/pynxxas/nxdl/: __init__.py  models.py  repo.py
src/pynxxas/tests/: conftest.py  test_convert.py  test_models.py  test_nexus.py  test_nxdl.py  test_nxxas.py  test_units.py  test_xdi.py
xas_beamline_data/: 6_Ti.0001
xdi_files/: zn_znse_rt.xdi
