[metadata]
name = pynxxas
version = attr: pynxxas.__version__
author = ESRF
author_email = wout.de_nolf@esrf.fr
description = Read and write XAS data in NeXus
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/XraySpectroscopy/pynxxas/
project_urls = 
    Source = https://github.com/XraySpectroscopy/pynxxas/
    Documentation = https://pynxxas.readthedocs.io/
    Tracker = https://github.com/XraySpectroscopy/pynxxas/issues/
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package_dir=
	=src
packages=find:
python_requires = >=3.8
install_requires = 
    numpy
    h5py
    pydantic >=2.6
    pint
    typing_extensions; python_version < "3.9"

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest >=7
dev =
    %(test)s
    black >=22
    flake8 >=4
doc =
    %(test)s
    sphinx >=4.5
    sphinx-autodoc-typehints >=1.16
    pydata-sphinx-theme < 0.15

[options.entry_points]
console_scripts =
    nxxas-convert=pynxxas.apps.nxxas_convert:main

# E501 (line too long) ignored for now
# E203 and W503 incompatible with black formatting (https://black.readthedocs.io/en/stable/compatible_configs.html#flake8)
[flake8]
ignore = E501, E203, W503
max-line-length = 88
exclude = 
    .eggs

# E402 (module import not at top of file) ignored
[flake8_nb]
ignore = E501, E203, W503, E402
max-line-length = 88

[coverage:run]
omit =
    setup.py
    */tests/*
